--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,7 @@ steps:
   settings:
     registry: registry.shitangdama.cn
     repo: registry.shitangdama.cn/dama/laki-app
+    dockerfile: Dockerfile
     username: shitangdama
     password:
       from_secret: docker_password
