--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.8.0",
+    "js-yaml": "^3.13.1",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
     "react": "^16.11.0",
+    "react-ace": "^8.0.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
