--- a/package.json
+++ b/package.json
@@ -15,17 +15,21 @@
     "lodash": "^4.17.15",
     "mobx": "^5.15.0",
     "mobx-react": "^6.1.4",
+    "monaco-editor": "^0.18.1",
     "react": "^16.11.0",
     "react-ace": "^8.0.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.11.0",
+    "react-monaco-editor": "^0.32.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
-    "test": "react-app-rewired test"
+    "test": "react-app-rewired test",
+    "dev": "BROWSER=none react-app-rewired start"
   },
   "eslintConfig": {
     "extends": "react-app"
